[tool.poetry]
name = "mlfinpy"
version = "0.1.0"
description = "Mlfin.py is an Advance Machine Learning toolbox for financial applications."
license = "MIT"
authors = ["Robert Bach <robert@quantfin.net>"]
readme = "README.rst"
repository = "https://github.com/baobach/mlfinpy"
documentation = "https://mlfinpy.readthedocs.io/en/latest/"
keywords= ["finance", "machine learning", "algorithmic trading", "quant", "investing"]
classifiers=[
        "Development Status :: 3 - Alpha",
        "Environment :: Console",
        "Intended Audience :: Financial and Insurance Industry",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Office/Business :: Financial",
        "Topic :: Office/Business :: Financial :: Investment",
    ]
packages = [ {include = "mlfinpy"} ]

[tool.poetry.urls]
"Issues" = "https://github.com/baobach/mlfinpy/issues"
"Personal website" = "https://quantfin.net"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.22,<1.27"
numba = "^0.60.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1"
pytest-cov = ">=4.0"
flake8 = "^4.0.1"
black = "^24.8.0"
isort = "^5.13.2"

[tool.poetry.extras]
optionals = ["scikit-learn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"

